--- a/zoj-frontend/package.json
+++ b/zoj-frontend/package.json
@@ -13,6 +13,7 @@
     "@bytemd/vue-next": "^1.21.0",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
+    "moment": "^2.29.4",
     "monaco-editor": "^0.44.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "vue": "^3.2.13",
