--- a/zoj-backend/.gitignore
+++ b/zoj-backend/.gitignore
@@ -17,6 +17,7 @@ target/
 .sts4-cache
 
 ### IntelliJ IDEA ###
+sql
 .idea
 *.iws
 *.iml
@@ -145,3 +146,5 @@ fabric.properties
 # Android studio 3.1+ serialized cache file
 .idea/caches/build_file_checksums.ser
 
+#temp 文件
+/src/main/java/com/zhou/zoj/controller/temp/
