--- a/zoj-backend/src/main/resources/application.yml
+++ b/zoj-backend/src/main/resources/application.yml
@@ -79,8 +79,8 @@ mybatis-plus:
 # todo 需替换配置
 cos:
   client:
-    accessKey:
-    secretKey:
+    accessKey: XXXXXXXXXXXXXXXXXXXXXXXX
+    secretKey: XXXXXXXXXXXXXXXXXXXXXXXX
     region: ap-nanjing
     bucket: zoj-1322845231
 # 代码沙箱配置
